k8s/flask-app-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  # 加入這段！強制綁定預設後端為我們自己的服務
  defaultBackend:
    service:   
      name: flask-app-service
      port:
        number: 80
        
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: flask-app-service
            port:
              number: 80
